--- a/src/main/webapp/app/entities/employe/update/employe-update.component.html
+++ b/src/main/webapp/app/entities/employe/update/employe-update.component.html
@@ -225,6 +225,19 @@
         </div>
 
         <div class="row mb-3">
+          <label class="form-label" jhiTranslate="gesEmployerApp.employe.user" for="field_user">User</label>
+          <select class="form-control" id="field_user" data-cy="user" name="user" formControlName="user">
+            <option [ngValue]="null"></option>
+            <option
+              [ngValue]="userOption.id === editForm.get('user')!.value?.id ? editForm.get('user')!.value : userOption"
+              *ngFor="let userOption of usersSharedCollection; trackBy: trackUserById"
+            >
+              {{ userOption.id }}
+            </option>
+          </select>
+        </div>
+
+        <div class="row mb-3">
           <label jhiTranslate="gesEmployerApp.employe.projet" for="field_projets">Projet</label>
           <select class="form-control" id="field_projets" data-cy="projet" multiple name="projets" formControlName="projets">
             <option
