--- a/src/main/webapp/app/entities/diplome/update/diplome-update.component.html
+++ b/src/main/webapp/app/entities/diplome/update/diplome-update.component.html
@@ -47,14 +47,15 @@
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="gesEmployerApp.diplome.description" for="field_description">Description</label>
-          <input
+          <textarea
             type="text"
             class="form-control"
             name="description"
             id="field_description"
             data-cy="description"
             formControlName="description"
-          />
+          >
+          </textarea>
         </div>
 
         <div class="row mb-3">
@@ -94,19 +95,6 @@
             id="field_diplomeContentType"
             formControlName="diplomeContentType"
           />
-        </div>
-
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="gesEmployerApp.diplome.employe" for="field_employe">Employe</label>
-          <select class="form-control" id="field_employe" data-cy="employe" name="employe" formControlName="employe">
-            <option [ngValue]="null"></option>
-            <option
-              [ngValue]="employeOption.id === editForm.get('employe')!.value?.id ? editForm.get('employe')!.value : employeOption"
-              *ngFor="let employeOption of employesSharedCollection; trackBy: trackEmployeById"
-            >
-              {{ employeOption.id }}
-            </option>
-          </select>
         </div>
       </div>
 
