--- a/src/main/webapp/app/entities/employe/detail/employe-detail.component.html
+++ b/src/main/webapp/app/entities/employe/detail/employe-detail.component.html
@@ -92,13 +92,86 @@
         </dd>
       </dl>
 
-      <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
-        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
-      </button>
+      <h3>Diplomes</h3>
 
-      <button type="button" [routerLink]="['/employe', employe.id, 'edit']" class="btn btn-primary">
-        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">Edit</span>
-      </button>
+      <div class="alert alert-warning" id="no-result" *ngIf="employe.diplomes?.length === 0">
+        <span jhiTranslate="gesEmployerApp.diplome.home.notFound">No diplomes found</span>
+      </div>
+
+      <div class="table-responsive" id="entities" *ngIf="employe.diplomes && employe.diplomes.length > 0">
+        <table class="table table-striped" aria-describedby="page-heading">
+          <thead>
+            <tr>
+              <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
+              <th scope="col"><span jhiTranslate="gesEmployerApp.diplome.libelle">Libelle</span></th>
+              <th scope="col"><span jhiTranslate="gesEmployerApp.diplome.universite">Universite</span></th>
+              <th scope="col"><span jhiTranslate="gesEmployerApp.diplome.date">Date</span></th>
+              <th scope="col"><span jhiTranslate="gesEmployerApp.diplome.description">Description</span></th>
+              <th scope="col"><span jhiTranslate="gesEmployerApp.diplome.diplome">Diplome</span></th>
+              <th scope="col"><span jhiTranslate="gesEmployerApp.diplome.employe">Employe</span></th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let diplome of employe.diplomes; trackBy: trackId" data-cy="entityTable">
+              <td>
+                <a [routerLink]="['/diplome', diplome.id, 'view']">{{ diplome.id }}</a>
+              </td>
+              <td>{{ diplome.libelle }}</td>
+              <td>{{ diplome.universite }}</td>
+              <td>{{ diplome.date | formatMediumDatetime }}</td>
+              <td>{{ diplome.description }}</td>
+              <td>
+                <a *ngIf="diplome.diplome" (click)="openFile(diplome.diplome, diplome.diplomeContentType)" jhiTranslate="entity.action.open"
+                  >open</a
+                >
+                <span *ngIf="diplome.diplome">{{ diplome.diplomeContentType }}, {{ byteSize(diplome.diplome) }}</span>
+              </td>
+              <td>
+                <div *ngIf="diplome.employe">
+                  <a [routerLink]="['/employe', diplome.employe?.id, 'view']">{{ diplome.employe?.id }}</a>
+                </div>
+              </td>
+              <td class="text-end">
+                <div class="btn-group">
+                  <button
+                    type="submit"
+                    [routerLink]="['/diplome', diplome.id, 'view']"
+                    class="btn btn-info btn-sm"
+                    data-cy="entityDetailsButton"
+                  >
+                    <fa-icon icon="eye"></fa-icon>
+                    <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                  </button>
+
+                  <button
+                    type="submit"
+                    [routerLink]="['/diplome', diplome.id, 'edit']"
+                    class="btn btn-primary btn-sm"
+                    data-cy="entityEditButton"
+                  >
+                    <fa-icon icon="pencil-alt"></fa-icon>
+                    <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                  </button>
+
+                  <button type="submit" (click)="delete(diplome)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
+                    <fa-icon icon="times"></fa-icon>
+                    <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
+          <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
+        </button>
+
+        <button type="button" [routerLink]="['/employe', employe.id, 'edit']" class="btn btn-primary">
+          <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">Edit</span>
+        </button>
+      </div>
     </div>
   </div>
 </div>
