--- a/src/main/webapp/app/entities/structure/update/structure-update.component.html
+++ b/src/main/webapp/app/entities/structure/update/structure-update.component.html
@@ -34,7 +34,7 @@
               [ngValue]="structureOption.id === editForm.get('parent')!.value?.id ? editForm.get('parent')!.value : structureOption"
               *ngFor="let structureOption of parentsCollection; trackBy: trackStructureById"
             >
-              {{ structureOption.id }}
+              {{ structureOption.nom }}
             </option>
           </select>
         </div>
