--- a/src/main/webapp/app/entities/structure/list/structure.component.html
+++ b/src/main/webapp/app/entities/structure/list/structure.component.html
@@ -52,7 +52,7 @@
           <td jhiTranslate="{{ 'gesEmployerApp.Type.' + structure.type }}">{{ structure.type }}</td>
           <td>
             <div *ngIf="structure.parent">
-              <a [routerLink]="['/structure', structure.parent?.id, 'view']">{{ structure.parent?.id }}</a>
+              <a [routerLink]="['/structure', structure.parent?.id, 'view']">{{ structure.parent?.nom }}</a>
             </div>
           </td>
           <td class="text-end">
