--- a/src/main/webapp/app/entities/structure/detail/structure-detail.component.html
+++ b/src/main/webapp/app/entities/structure/detail/structure-detail.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center">
+<div class="page-2">
   <!--<div class="col-8">
     <div *ngIf="structure">
       <h2 data-cy="structureDetailsHeading"><span jhiTranslate="gesEmployerApp.structure.detail.title">Structure</span></h2>
@@ -40,87 +40,84 @@
     </div>
   </div>-->
 
-  <div *ngIf="structure" class="u-body u-xl-mode">
-    <header class="u-align-center-xs u-border-1 u-border-grey-25 u-clearfix u-header u-header" id="sec-76de">
-      <div class="u-align-left u-clearfix u-sheet u-sheet-1"></div>
-    </header>
-
-    <section class="u-clearfix u-white u-section-1" id="carousel_86f6">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">{{ structure.nom }}<br /></h1>
-        <a
-          href="https://nicepage.com/website-templates"
-          class="u-border-none u-btn u-btn-round u-button-style u-hover-grey-15 u-palette-1-dark-2 u-radius-24 u-text-black u-btn-1"
-          >LE DIRECTEUR<span style="font-size: 1.5rem"></span>
-        </a>
-        <img
-          class="u-image u-image-round u-radius-25 u-image-1"
-          data-image-width="1620"
-          data-image-height="1080"
-          src="../../../../content/images/page/ghghgh-min.jpg"
-        />
-
-        <div class="u-align-left u-container-style u-grey-10 u-group u-radius-25 u-shape-round u-group-1">
-          <div class="u-container-layout u-valign-top u-container-layout-1">
-            <h4 class="u-text u-text-2">LISTE DES</h4>
-            <h1 class="u-text u-text-3">
-              <span class="u-text-black">Employés du direction&nbsp;</span>
-            </h1>
-            <p class="u-text u-text-body-alt-color u-text-4">
-              <span class="u-text-black">cliquez ici pour consulter les&nbsp;&nbsp;</span>
-              <a
-                href="https://www.freepik.com/photos/people"
-                class="u-border-1 u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2"
-                target="_blank"
+  <div *ngIf="structure">
+    <div class="u-body u-xl-mode">
+      <header class="u-align-center-xs u-border-1 u-border-grey-25 u-clearfix u-header u-header" id="sec-76de">
+        <div class="u-align-left u-clearfix u-sheet u-sheet-1"></div>
+      </header>
+      <section class="u-clearfix u-white u-section-1" id="carousel_86f6">
+        <div class="u-clearfix u-sheet u-sheet-1">
+          <h1 class="u-text u-text-default u-text-1">LA DIRECTION DES DGHRHNGDNJYJY<br /></h1>
+          <a
+            href="https://nicepage.com/website-templates"
+            class="u-border-none u-btn u-btn-round u-button-style u-hover-grey-15 u-palette-1-dark-2 u-radius-24 u-text-black u-btn-1"
+            >LE DIRECTEUR<span style="font-size: 1.5rem"></span>
+          </a>
+          <img
+            class="u-image u-image-round u-radius-25 u-image-1"
+            data-image-width="1620"
+            data-image-height="1080"
+            src="../../../../content/images/page/ghghgh-min.jpg"
+          />
+          <div class="u-align-left u-container-style u-grey-10 u-group u-radius-25 u-shape-round u-group-1">
+            <div class="u-container-layout u-valign-top u-container-layout-1">
+              <h4 class="u-text u-text-2">LISTE DES</h4>
+              <h1 class="u-text u-text-3">
+                <span class="u-text-black">Employés du direction&nbsp;</span>
+              </h1>
+              <p class="u-text u-text-body-alt-color u-text-4">
+                <span class="u-text-black">cliquez ici pour consulter les&nbsp;&nbsp;</span>
+                <a
+                  href="https://www.freepik.com/photos/people"
+                  class="u-border-1 u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2"
+                  target="_blank"
+                >
+                  <span class="u-text-black">profils</span>
+                  <br />
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="u-list u-list-1">
+            <div class="u-repeater u-repeater-1">
+              <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
+                <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
+                  <span class="u-file-icon u-icon u-icon-1"><img src="../../../../content/images/page/1283187.png" alt="" /></span>
+                  <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-5">SERVICE BLABLABLABALA</h6>
+                  <p class="u-text u-text-6">Excepteur sint occaecat cupidatat non proident,&nbsp;</p>
+                </div>
+              </div>
+              <div
+                class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2"
               >
-                <span class="u-text-black">profils</span>
-                <br />
-              </a>
-            </p>
-          </div>
-        </div>
-
-        <div class="u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
-                <span class="u-file-icon u-icon u-icon-1"
-                  ><img src="../../../../content/../../../../content/images/page/page/1283187.png" alt=""
-                /></span>
-                <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-5">SERVICE BLABLABLABALA</h6>
-                <p class="u-text u-text-6">Excepteur sint occaecat cupidatat non proident,&nbsp;</p>
+                <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+                  <span class="u-file-icon u-icon u-icon-2"><img src="../../../../content/images/page/921356.png" alt="" /></span>
+                  <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-7">SERVICE PATATIPATATA</h6>
+                  <p class="u-text u-text-8">Excepteur sint occaecat cupidatat non proident</p>
+                </div>
               </div>
-            </div>
-            <div
-              class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2"
-            >
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
-                <span class="u-file-icon u-icon u-icon-2"><img src="../../../../content/images/page/921356.png" alt="" /></span>
-                <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-7">SERVICE PATATIPATATA</h6>
-                <p class="u-text u-text-8">Excepteur sint occaecat cupidatat non proident</p>
+              <div
+                class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3"
+              >
+                <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
+                  <span class="u-file-icon u-icon u-icon-3"><img src="../../../../content/images/page/2304241.png" alt="" /></span>
+                  <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-9">service blbla</h6>
+                  <p class="u-text u-text-10">Excepteur sint occaecat cupidatat non proident,&nbsp;</p>
+                </div>
               </div>
-            </div>
-            <div
-              class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3"
-            >
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
-                <span class="u-file-icon u-icon u-icon-3"><img src="../../../../content/images/page/2304241.png" alt="" /></span>
-                <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-9">service blbla</h6>
-                <p class="u-text u-text-10">Excepteur sint occaecat cupidatat non proident,&nbsp;</p>
-              </div>
-            </div>
-            <div
-              class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-4"
-            >
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5">
-                <span class="u-file-icon u-icon u-icon-4"><img src="../../../../content/images/page/2706962.png" alt="" /></span>
-                <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-11">service lmmm</h6>
-                <p class="u-text u-text-12">Excepteur sint occaecat cupidatat non proident</p>
+              <div
+                class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-4"
+              >
+                <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5">
+                  <span class="u-file-icon u-icon u-icon-4"><img src="../../../../content/images/page/2706962.png" alt="" /></span>
+                  <h6 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-4 u-text-11">service lmmm</h6>
+                  <p class="u-text u-text-12">Excepteur sint occaecat cupidatat non proident</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
 </div>
