--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -229,3 +229,371 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
   }
 }
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+.page-2 {
+  .u-section-1 {
+    background-image: none;
+  }
+
+  .u-section-1 .u-sheet-1 {
+    min-height: 931px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-weight: 700;
+    margin: 25px 112px 0 auto;
+  }
+
+  .u-section-1 .u-btn-1 {
+    border-style: none;
+    font-weight: 700;
+    font-size: 2.25rem;
+    background-image: none;
+    margin: 62px auto 0 62px;
+    padding: 18px 101px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 818px;
+    height: 474px;
+    margin: 79px 95px 0 auto;
+  }
+
+  .u-section-1 .u-group-1 {
+    min-height: 280px;
+    width: 450px;
+    margin: -544px auto 0 62px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding: 12px 30px 15px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-weight: 700;
+    margin: 0 255px 0 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    font-family: Oswald, sans-serif;
+    font-size: 4.5rem;
+    font-weight: 700;
+    margin: 21px 0 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin: 19px 1px 0 0;
+  }
+
+  .u-section-1 .u-btn-2 {
+    border-style: none none solid;
+    padding: 0;
+  }
+
+  .u-section-1 .u-list-1 {
+    width: 1089px;
+    margin: 112px auto 9px;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    grid-template-columns: calc(25% - 13.5px) calc(25% - 13.5px) calc(25% - 13.5px) calc(25% - 13.5px);
+    min-height: 283px;
+    grid-gap: 18px 18px;
+  }
+
+  .u-section-1 .u-list-item-1 {
+    background-image: none;
+    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding: 30px 28px 6px;
+  }
+
+  .u-section-1 .u-icon-1 {
+    height: 62px;
+    width: 62px;
+    margin: 0 auto 0 2px;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    background-image: none;
+    font-weight: 700;
+    margin: 16px 3px 0;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-style: italic;
+    font-size: 1.25rem;
+    margin: 16px 4px 0 0;
+  }
+
+  .u-section-1 .u-list-item-2 {
+    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  .u-section-1 .u-container-layout-3 {
+    padding: 30px 28px 6px;
+  }
+
+  .u-section-1 .u-icon-2 {
+    height: 62px;
+    width: 62px;
+    margin: 0 auto 0 2px;
+  }
+
+  .u-section-1 .u-text-7 {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    background-image: none;
+    font-weight: 700;
+    margin: 16px 3px 0;
+  }
+
+  .u-section-1 .u-text-8 {
+    font-style: italic;
+    font-size: 1.25rem;
+    margin: 16px 4px 0 0;
+  }
+
+  .u-section-1 .u-list-item-3 {
+    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  .u-section-1 .u-container-layout-4 {
+    padding: 30px 28px 15px;
+  }
+
+  .u-section-1 .u-icon-3 {
+    height: 62px;
+    width: 62px;
+    margin: 0 auto 0 2px;
+  }
+
+  .u-section-1 .u-text-9 {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    background-image: none;
+    font-weight: 700;
+    margin: 16px 3px 0;
+  }
+
+  .u-section-1 .u-text-10 {
+    font-style: italic;
+    font-size: 1.25rem;
+    margin: 16px 4px 0 0;
+  }
+
+  .u-section-1 .u-list-item-4 {
+    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  .u-section-1 .u-container-layout-5 {
+    padding: 30px 28px 15px;
+  }
+
+  .u-section-1 .u-icon-4 {
+    height: 62px;
+    width: 62px;
+    margin: 0 auto 0 2px;
+  }
+
+  .u-section-1 .u-text-11 {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    background-image: none;
+    font-weight: 700;
+    margin: 16px 3px 0;
+  }
+
+  .u-section-1 .u-text-12 {
+    font-style: italic;
+    font-size: 1.25rem;
+    margin: 16px 4px 0 0;
+  }
+
+  @media (max-width: 1199px) {
+    .u-section-1 .u-btn-1 {
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-list-1 {
+      width: 940px;
+    }
+
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: repeat(4, calc(25% - 13.5px));
+      min-height: 321px;
+    }
+
+    .u-section-1 .u-container-layout-2 {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .u-section-1 .u-text-5 {
+      margin-right: 0;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-text-6 {
+      margin-right: 0;
+    }
+
+    .u-section-1 .u-container-layout-3 {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .u-section-1 .u-text-7 {
+      margin-right: 0;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-text-8 {
+      margin-right: 0;
+    }
+
+    .u-section-1 .u-container-layout-4 {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .u-section-1 .u-text-9 {
+      margin-right: 0;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-text-10 {
+      margin-right: 0;
+    }
+
+    .u-section-1 .u-container-layout-5 {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .u-section-1 .u-text-11 {
+      margin-right: 0;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-text-12 {
+      margin-right: 0;
+    }
+  }
+
+  @media (max-width: 991px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 874px;
+    }
+
+    .u-section-1 .u-image-1 {
+      width: 720px;
+      height: 417px;
+      margin-right: 0;
+    }
+
+    .u-section-1 .u-group-1 {
+      margin-top: -487px;
+    }
+
+    .u-section-1 .u-text-3 {
+      font-size: 4.375rem;
+    }
+
+    .u-section-1 .u-list-1 {
+      width: 720px;
+    }
+
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: repeat(2, calc(50% - 9px));
+      min-height: 655px;
+    }
+
+    .u-section-1 .u-text-5 {
+      font-size: 1.875rem;
+    }
+
+    .u-section-1 .u-text-7 {
+      font-size: 1.875rem;
+    }
+
+    .u-section-1 .u-text-9 {
+      font-size: 1.875rem;
+    }
+
+    .u-section-1 .u-text-11 {
+      font-size: 1.875rem;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 770px;
+    }
+
+    .u-section-1 .u-image-1 {
+      width: 540px;
+      height: 313px;
+    }
+
+    .u-section-1 .u-group-1 {
+      margin-top: -383px;
+    }
+
+    .u-section-1 .u-container-layout-1 {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .u-section-1 .u-text-3 {
+      font-size: 3.75rem;
+    }
+
+    .u-section-1 .u-list-1 {
+      width: 540px;
+    }
+
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: 100%;
+      min-height: 1156px;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 654px;
+    }
+
+    .u-section-1 .u-image-1 {
+      object-position: 73.14% 50%;
+      width: 340px;
+      height: 197px;
+    }
+
+    .u-section-1 .u-group-1 {
+      width: 340px;
+      margin-top: -267px;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-text-2 {
+      margin-right: 145px;
+    }
+
+    .u-section-1 .u-text-3 {
+      font-size: 2.5rem;
+    }
+
+    .u-section-1 .u-text-4 {
+      margin-right: 0;
+    }
+
+    .u-section-1 .u-list-1 {
+      width: 340px;
+    }
+  }
+}
