--- a/src/main/webapp/app/home/home-ministre/home-ministre.component.html
+++ b/src/main/webapp/app/home/home-ministre/home-ministre.component.html
@@ -50,7 +50,7 @@
                   <h2 class="u-custom-font u-text u-text-6">les directions centrales</h2>
                   <h5 class="u-text u-text-7">Pour consulter les directions centrales clicker&nbsp;çi dessous</h5>
                   <a
-                    href="https://nicepage.com/c/gallery-website-templates"
+                    routerLink="structure/directions"
                     class="u-active-white u-border-none u-btn u-btn-round u-button-style u-hover-grey-30 u-palette-1-dark-2 u-radius-8 u-text-active-palette-5-dark-3 u-text-body-alt-color u-text-hover-palette-5-dark-3 u-btn-3"
                     >PLUS</a
                   >
