--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -2158,3 +2158,344 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
     }
   }
 }
+.employes {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1012px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin: 70px auto 0 363px;
+  }
+
+  .u-section-1 .u-list-1 {
+    grid-template-rows: auto auto;
+    margin-top: 70px;
+    margin-bottom: 60px;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    grid-template-columns: 50% 50%;
+    min-height: 560px;
+    grid-gap: 0px 0px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding: 0;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 244px;
+    min-height: 268px;
+    margin: 8px 41px 0 auto;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    font-style: normal;
+    margin: 20px 0 0;
+  }
+
+  .u-section-1 .u-btn-1 {
+    background-image: linear-gradient(to right, #478ac9, #4c7397);
+    border-style: none;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.9375rem;
+    letter-spacing: 1px;
+    box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.25);
+    margin: 30px auto 0;
+    padding: 8px 36px 9px 35px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    height: 271px;
+    background-image: none;
+    width: 558px;
+    margin: -247px auto 0 -272px;
+  }
+
+  .u-section-1 .u-icon-1 {
+    width: 143px;
+    height: 143px;
+    margin: -149px auto 0 67px;
+    padding: 0;
+  }
+
+  .u-section-1 .u-container-layout-3 {
+    padding: 0;
+  }
+
+  .u-section-1 .u-group-2 {
+    width: 244px;
+    min-height: 246px;
+    margin: 8px 41px 0 auto;
+  }
+
+  .u-section-1 .u-container-layout-4 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin: 0;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-style: normal;
+    margin: 20px 0 0;
+  }
+
+  .u-section-1 .u-btn-2 {
+    background-image: linear-gradient(to right, #478ac9, #4c7397);
+    border-style: none;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.9375rem;
+    letter-spacing: 1px;
+    box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.25);
+    margin: 30px auto 0;
+    padding: 8px 36px 9px 35px;
+  }
+
+  .u-section-1 .u-shape-2 {
+    height: 271px;
+    background-image: none;
+    width: 558px;
+    margin: -247px auto 0 -272px;
+  }
+
+  .u-section-1 .u-icon-2 {
+    width: 143px;
+    height: 143px;
+    margin: -149px auto 0 67px;
+    padding: 0;
+  }
+
+  .u-section-1 .u-container-layout-5 {
+    padding: 0;
+  }
+
+  .u-section-1 .u-group-3 {
+    width: 244px;
+    min-height: 246px;
+    margin: 8px 41px 0 auto;
+  }
+
+  .u-section-1 .u-container-layout-6 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin: 0;
+  }
+
+  .u-section-1 .u-text-7 {
+    font-style: normal;
+    margin: 20px 0 0;
+  }
+
+  .u-section-1 .u-btn-3 {
+    background-image: linear-gradient(to right, #478ac9, #4c7397);
+    border-style: none;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.9375rem;
+    letter-spacing: 1px;
+    box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.25);
+    margin: 30px auto 0;
+    padding: 8px 36px 9px 35px;
+  }
+
+  .u-section-1 .u-shape-3 {
+    height: 271px;
+    background-image: none;
+    width: 558px;
+    margin: -247px auto 0 -272px;
+  }
+
+  .u-section-1 .u-icon-3 {
+    width: 143px;
+    height: 143px;
+    margin: -149px auto 0 67px;
+    padding: 0;
+  }
+
+  .u-section-1 .u-container-layout-7 {
+    padding: 0;
+  }
+
+  .u-section-1 .u-group-4 {
+    width: 244px;
+    min-height: 246px;
+    margin: 8px 41px 0 auto;
+  }
+
+  .u-section-1 .u-container-layout-8 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-1 .u-text-8 {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin: 0;
+  }
+
+  .u-section-1 .u-text-9 {
+    font-style: normal;
+    margin: 20px 0 0;
+  }
+
+  .u-section-1 .u-btn-4 {
+    background-image: linear-gradient(to right, #478ac9, #4c7397);
+    border-style: none;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.9375rem;
+    letter-spacing: 1px;
+    box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.25);
+    margin: 30px auto 0;
+    padding: 8px 36px 9px 35px;
+  }
+
+  .u-section-1 .u-shape-4 {
+    height: 271px;
+    background-image: none;
+    width: 558px;
+    margin: -247px auto 0 -272px;
+  }
+
+  .u-section-1 .u-icon-4 {
+    width: 143px;
+    height: 143px;
+    margin: -149px auto 0 67px;
+    padding: 0;
+  }
+
+  @media (max-width: 1199px) {
+    .u-section-1 .u-text-1 {
+      margin-top: 80px;
+      margin-left: 299px;
+    }
+
+    .u-section-1 .u-list-1 {
+      margin-top: 56px;
+    }
+
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: repeat(2, 50%);
+      min-height: 514px;
+    }
+
+    .u-section-1 .u-container-layout-1 {
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-container-layout-2 {
+      padding-top: 0;
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-shape-1 {
+      width: 244px;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-container-layout-3 {
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-container-layout-4 {
+      padding-top: 0;
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-shape-2 {
+      width: 244px;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-container-layout-5 {
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-container-layout-6 {
+      padding-top: 0;
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-shape-3 {
+      width: 244px;
+      margin-left: 0;
+    }
+
+    .u-section-1 .u-container-layout-7 {
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-container-layout-8 {
+      padding-top: 0;
+      padding-bottom: 8px;
+    }
+
+    .u-section-1 .u-shape-4 {
+      width: 244px;
+      margin-left: 0;
+    }
+  }
+
+  @media (max-width: 991px) {
+    .u-section-1 .u-text-1 {
+      margin-top: 748px;
+      margin-left: 229px;
+    }
+
+    .u-section-1 .u-list-1 {
+      margin-top: -612px;
+      margin-bottom: 0;
+    }
+
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: 100%;
+      min-height: 1238px;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .u-section-1 .u-text-1 {
+      margin-left: 172px;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .u-section-1 .u-text-1 {
+      margin-left: 108px;
+    }
+
+    .u-section-1 .u-list-1 {
+      margin-top: -593px;
+    }
+  }
+  .u-section-2 .u-sheet-1 {
+    min-height: 500px;
+  }
+
+  .u-text-3 a {
+    color: #ffffff;
+  }
+}
