--- a/src/main/webapp/app/home/home-ministre/home-ministre.component.html
+++ b/src/main/webapp/app/home/home-ministre/home-ministre.component.html
@@ -14,7 +14,7 @@
                   <h2 class="u-custom-font u-text u-text-2">le cabinet du ministère</h2>
                   
                   <h5 class="u-text u-text-3">Pour consulter le cabinet du ministère clicker çi dessous</h5>
-                  <a routerLink=""
+                  <a routerLink="structure/cabinet"
                     
                     class="u-active-white u-border-none u-btn u-btn-round u-button-style u-hover-grey-30 u-palette-1-dark-2 u-radius-8 u-text-active-palette-5-dark-3 u-text-body-alt-color u-text-hover-palette-5-dark-3 u-btn-1"
                     >PLUS</a
@@ -32,8 +32,8 @@
                   <span class="u-file-icon u-icon u-icon-3"><img src=" ../../../content/images/page/10910.png" alt="" /></span>
                   <h2 class="u-custom-font u-text u-text-4">le secrétariat général</h2>
                   <h5 class="u-text u-text-5">Pour consulter le secrétariat général clicker ​çi dessous</h5>
-                  <a
-                    href="https://nicepage.com/k/awards-website-templates"
+                  <a routerLink="structure/secretariat"
+                    
                     class="u-active-white u-border-none u-btn u-btn-round u-button-style u-hover-grey-30 u-palette-1-dark-2 u-radius-8 u-text-active-palette-5-dark-3 u-text-body-alt-color u-text-hover-palette-5-dark-3 u-btn-2"
                     >PLUS</a
                   >
