--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -40,10 +40,9 @@
     <jhi-home-ministre *jhiHasAnyAuthority="'ROLE_MINISTRE'"></jhi-home-ministre>
 
     
-    <jhi-detail-structure *jhiHasAnyAuthority="'ROLE_DIRCTEUR'"></jhi-detail-structure>
-    <jhi-detail-structure *jhiHasAnyAuthority="'ROLE_SG'"></jhi-detail-structure>
+    <jhi-detail-structure *jhiHasAnyAuthority="'ROLE_DIRECTEUR'"></jhi-detail-structure>
+    
 
-    <jhi-home-directeur *jhiHasAnyAuthority="'ROLE_DIRCTEUR'"></jhi-home-directeur>
   </div>
 
   <div class="home-page" *ngSwitchCase="false">
@@ -62,9 +61,7 @@
                       BIENVENUE
                     </h2>
                     <p class="u-text u-text-2">
-                      Velit scelerisque in dictum non consectetur a erat. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper.
-                      Dictum sit amet justo donec enim diam vulputate ut. Velit egestas dui id ornare arcu odio. Tellus pellentesque eu
-                      tincidunt tortor aliquam.
+                     Dans l'application de gestion du personnel qui vous permet de consulter les directions et les employés du Ministère de la Transition Numérique de l'Innovation et de la Modernisation 
                     </p>
                     <a
                       (click)="login()"
