--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,9 +1,10 @@
-<nav data-cy="navbar" class="navbar navbar-dark navbar-expand-md bg-dark">
+<nav data-cy="navbar" class="navbar navbar-grey navbar-expand-md bg-grey">
   <div class="container-fluid">
     <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
       <span class="logo-img"></span>
-      <span jhiTranslate="global.title" class="navbar-title">Ges_employer</span>
-      <span class="navbar-version">{{ version }}</span>
+      <span  class="navbar-title">MINISTERE DE LA TRANSITION NUMERIQUE, DE<br>
+                L'INNOVATION ET DE LA. MODERNISATION DE L'ADMINISTRATION</span>
+      <span class="navbar-version"></span>
     </a>
     <a
       class="navbar-toggler d-lg-none"
