--- a/src/main/webapp/app/home/detail-structure/detail-structure.component.html
+++ b/src/main/webapp/app/home/detail-structure/detail-structure.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="u-container-style u-group u-palette-1-dark-2 u-radius-25 u-shape-round u-group-2">
       <div class="u-container-layout u-valign-middle u-container-layout-6">
-        <h5 class="u-text u-text-9"><span style="font-size: 2.5rem">Chef de la structure</span>&nbsp;</h5>
+        <h5 class="u-text u-text-9"><span style="font-size: 2.5rem">{{ structure.chef }}</span>&nbsp;</h5>
       </div>
     </div>
   </section>
