--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -101,7 +101,9 @@
         <div class="overlay-panel overlay-right">
           <h1>pas de compte actuel!</h1>
           <p>créer un nouveau</p>
+          <a routerLink="/account/register">
           <button class="ghost" id="signUp">Sign Up</button>
+        </a>
         </div>
       </div>
     </div>
