--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -1,4 +1,7 @@
-<div>
+<!--<div>
+
+
+
   <div class="d-flex justify-content-center">
     <div class="col-md-8">
       <h1 jhiTranslate="register.title" data-cy="registerTitle">Registration</h1>
@@ -232,3 +235,104 @@
     </div>
   </div>
 </div>
+-->
+
+
+
+
+
+
+
+<div class="login-page">
+  
+  <div class="alert alert-success" *ngIf="success" jhiTranslate="register.messages.success">
+
+    <strong>Registration saved!</strong> Please check your email for confirmation.
+  </div>
+  <div  *ngIf="success"class="mt-3 alert alert-warning">
+   
+    <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
+    <a class="alert-link" routerLink="/login" jhiTranslate="global.messages.info.authenticated.link">sign in</a
+    >
+    </div>
+  <div *ngIf="!success" class="container" id="container">
+    <div class="form-container sign-in-container">
+      
+     
+
+      <form  *ngIf="!success" class="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm">
+        <h1>se connecter</h1>
+
+        <span>veuiller remplir vos données</span>
+        <input
+        type="text"
+        class="form-control"
+        id="login"
+        name="login"
+        placeholder="{{ 'global.form.username.placeholder' | translate }}"
+        formControlName="login"
+        data-cy="username"
+        #login
+      />
+      <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            placeholder="{{ 'global.form.email.placeholder' | translate }}"
+            formControlName="email"
+            data-cy="email"
+          />		
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+            placeholder="{{ 'global.form.newpassword.placeholder' | translate }}"
+            formControlName="password"
+            data-cy="firstPassword"
+          />
+          <input
+            type="password"
+            class="form-control"
+            id="confirmPassword"
+            name="confirmPassword"
+            placeholder="{{ 'global.form.confirmpassword.placeholder' | translate }}"
+            formControlName="confirmPassword"
+            data-cy="secondPassword"
+          />
+
+        <button type="submit"
+        [disabled]="registerForm.invalid"
+        class="btn btn-primary"
+        jhiTranslate="register.form.button"
+        data-cy="submit">Sign in</button>
+      </form>
+     
+        
+      
+    </div>
+    <div class="overlay-container">
+      <div class="overlay">
+        <div class="overlay-panel overlay-left">
+          <h1>veuiller remplir vos données</h1>
+          <p></p>
+          <button class="ghost" id="signIn">Sign In</button>
+        </div>
+        <div class="overlay-panel overlay-right">
+          <h1>pas de compte actuel!</h1>
+          <p>créer un nouveau</p>
+          <button class="ghost" id="signUp">Sign Up</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
