--- a/src/main/webapp/app/entities/employe/list/employe.component.html
+++ b/src/main/webapp/app/entities/employe/list/employe.component.html
@@ -105,7 +105,7 @@
           </td>
           <td>
             <div *ngIf="employe.structure">
-              <a [routerLink]="['/structure', employe.structure?.id, 'view']">{{ employe.structure?.id }}</a>
+              <a [routerLink]="['/structure', employe.structure?.id, 'view']">{{ employe.structure?.nom}}</a>
             </div>
           </td>
           <td class="text-end">
