--- a/src/main/webapp/app/home/secretariat/secretariat.component.html
+++ b/src/main/webapp/app/home/secretariat/secretariat.component.html
@@ -1,8 +1,9 @@
-<!--
-    <div class="secretariat" >
-<div class="secretariat" *ngIf="structures">
+
+ <div class="secretariat" >
+      
+<div class="secretariat" *ngIf="structure">
     <section class="u-clearfix u-grey-5 u-section-1" id="carousel_86f6">
-      <h2 class="u-text u-text-1">Secretariat_Generale</h2>
+      <h2 class="u-text u-text-1">{{ structure.nom }}</h2>
       <div class="u-bottom-right-radius-25 u-palette-5-light-2 u-shape u-shape-round u-shape-1"></div>
       <img
         class="u-image u-image-round u-radius-25 u-image-1"
@@ -11,7 +12,7 @@
         src="../../../content/images/page/ghghgh-min-25.jpg"
       />
       <div class="u-align-left u-container-style u-group u-palette-1-dark-1 u-radius-25 u-shape-round u-group-1">
-        <a [routerLink]="['/structureSG','employes']">
+        <a [routerLink]="['/structure', structure.id, 'employes']">
           <div class="u-container-layout u-valign-bottom u-container-layout-1">
             <h5 class="u-text u-text-default u-text-2">LISTES DES</h5>
             <h1 class="u-text u-text-3">Employés de la structure</h1>
@@ -29,10 +30,10 @@
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div
-          *ngFor="let sousStructures of structures.structures; trackBy: trackId"
+          *ngFor="let sousStructures of structure.structures ; trackBy: trackId"
             class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1"
           >
-            <a [routerLink]="['/structureSG', sousStructures.id, 'details']">
+            <a [routerLink]="['/structure', sousStructures.id, 'details']">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <span class="u-file-icon u-icon u-icon-1">
                   <img *ngIf="sousStructures.image" [src]="bypassSecurityTrust(sousStructures.image)" />
@@ -45,10 +46,9 @@
       </div>
       <div class="u-container-style u-group u-palette-1-dark-2 u-radius-25 u-shape-round u-group-2">
         <div class="u-container-layout u-valign-middle u-container-layout-6">
-          <h5 class="u-text u-text-9"><span style="font-size: 2.5rem">Chef de la structure</span>&nbsp;</h5>
+          <h5 class="u-text u-text-9"><span style="font-size: 2.5rem">{{ structure.chef }}</span>&nbsp;</h5>
         </div>
       </div>
     </section>
   </div>
 </div>
--->
