--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
       <span class="logo-img"></span>
-      <span  class="navbar-title">MINISTERE DE LA TRANSITION NUMERIQUE, DE<br>
+      <span  jhiTranslate="global.title"  class="navbar-title">MINISTERE DE LA TRANSITION NUMERIQUE, DE<br>
                 L'INNOVATION ET DE LA. MODERNISATION DE L'ADMINISTRATION</span>
       <span class="navbar-version"></span>
     </a>
